--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1982,4 +1982,8 @@
   result: Hidden Blade Technique
   transliteration: Cáng dāo shì  
 
-  
+# Unknown
+- raw: 万宗
+  result: Myriad Skills
+  badtrans: true
+  literal: Wàn zōng
