--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -869,10 +869,10 @@
 
 # Sayings
 - raw: 阿弥陀佛
-  result: Amituofu
+  result: Amituofo
   badtrans: true
 - raw: 承让了
-  result: Thank you for letting me win
+  result: I respectfully concede
   badtrans: true
 
 # Sounds
