--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Raw\ExportedText\" />
     <Folder Include="Raw\Remaining\" />
     <Folder Include="Raw\SplitDb\" />
+    <Folder Include="TestResults\" />
   </ItemGroup>
 
 </Project>
