Plugin should be good

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2109,3 +2109,26 @@
 - raw: 藏刀式  
   result: Hidden Blade Technique
   transliteration: Cáng dāo shì  
+
+# Potential Skills
+# 福气=Fortune
+# 农学=Agriculture
+# 墨学=Calligraphy
+# 容貌=Appearance
+# 坚韧=Perseverance
+# 豪爽=Straightforward
+# 炼丹=Alchemy
+# 琴艺=Piano
+# 棋艺=Chess
+# 垂钓=Fishing
+# 酒量=Alcohol Tolerance
+# 道学=Taoism
+# 诡辞=Tactics
+# 兵道=Military Arts
+# 枪棍=Spear & Staff
+# 搏击=Combat Technique
+# 剑术=Sword Technique
+# 刀法=Blade Technique
+# 魔学=Demonology
+# 商道=Business
+# 口才=Persuasion
